Added common scss lib
Added additional tslint rules for stricter development

--- a/apps/supremegaming-angular/src/index.html
+++ b/apps/supremegaming-angular/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <supremegaming-root></supremegaming-root>
+    <sg-root></sg-root>
   </body>
 </html>
